--- a/Home page/index.css
+++ b/Home page/index.css
@@ -5,17 +5,27 @@
 
 body {
     margin: 0px;
+    position: relative;
 }
 
 #nav {
     width: 100%;
     height: 50px;
-    background-color: rgb(0, 0, 0);
+    background-color: #333;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding-top: 20px;
     box-shadow: rgba(151, 90, 90, 0.24) 0px 3px 8px;
+    overflow: hidden;
+    background-color: #333;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    left: 0;
+    right: 0;
+    height: 40px;
+    z-index: 2;
 }
 
 #menu {
@@ -35,7 +45,6 @@ body {
 
 #banner {
     width: 100%;
-    position: relative;
 }
 
 .blocks>h4 {
@@ -255,6 +264,7 @@ ul {
 .product-box {
     display: flex;
     justify-content: space-evenly;
+    gap: 10px;
     align-items: center;
     border: 1px solid rgb(194, 193, 193);
     padding: 10px;
@@ -487,7 +497,7 @@ ul {
     color: aliceblue
 }
 
-#download{
+#download {
     display: flex;
     justify-content: space-around;
     margin-top: 50px;
