--- a/Product Page/product.css
+++ b/Product Page/product.css
@@ -28,6 +28,20 @@ body {
     z-index: 2;
 }
 
+#crt {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    text-align: center;
+    padding: 5px;
+    margin-left: 20px;
+}
+
+#nav>div:hover {
+    cursor: pointer;
+    font-size: 20px;
+}
+
 #top {
     width: 92%;
     height: 55px;
@@ -38,16 +52,6 @@ body {
 
 #logo {
     width: 15%;
-    margin-left: -150px;
-}
-
-.blocks {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    text-align: center;
-    padding: 5px;
-    margin-left: 20px;
 }
 
 #logo>img {
@@ -109,7 +113,7 @@ body {
 }
 
 
-#description{
+#description {
     display: flex;
     justify-content: space-around;
     gap: 50px;
@@ -119,7 +123,7 @@ body {
     width: 80%;
 }
 
-.imgdiv{
+.imgdiv {
     width: 100%;
     margin: auto;
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
@@ -127,48 +131,50 @@ body {
     text-align: center;
 }
 
-.imgdiv img{
+.imgdiv img {
     width: 100%;
     margin: auto;
     justify-content: center;
     max-height: 500px;
 }
 
-.product_desc{
+.product_desc {
     width: 100%;
 }
-.title{
+
+.title {
     font-size: 25px;
 }
-.brand{
+
+.brand {
     font-size: 18px;
     color: rgb(114, 116, 116);
 }
 
-.price{
+.price {
     display: flex;
     gap: 40px;
 }
 
 .price h3,
-.price span{
+.price span {
     font-size: 25px;
 }
 
-.price h4{
+.price h4 {
     display: flex;
     gap: 10px;
     align-items: center;
-    color: rgb(42,100, 98);
+    color: rgb(42, 100, 98);
 }
 
-.buttondiv{
+.buttondiv {
     display: flex;
     gap: 40px;
     padding: 30px;
 }
 
-.buy {    
+.buy {
     padding: 15px;
     font-size: 20px;
     color: #376968;
@@ -181,7 +187,7 @@ body {
     padding-right: 30px;
 }
 
-.cart{
+.cart {
     background-color: #376968;
     padding: 15px;
     font-size: 20px;
@@ -195,19 +201,19 @@ body {
 }
 
 
-.details{
+.details {
     margin-top: 40px;
 }
 
-.block{
+.block {
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     width: 50%;
     margin-top: -15px;
 }
 
-.block>:nth-child(1){
+.block>:nth-child(1) {
     color: rgb(142, 139, 139);
 }
 
@@ -247,6 +253,6 @@ body {
     width: 100%;
 }
 
-#uname{
+#uname {
     color: wheat;
 }
