--- a/Search Page/Search.css
+++ b/Search Page/Search.css
@@ -28,6 +28,7 @@ body {
     right: 0;
     height: 40px;
     z-index: 2;
+
 }
 
 #top {
@@ -39,8 +40,8 @@ body {
 }
 
 #logo {
-    width: 15%;
-    margin-left: -150px;
+    width: 20%;
+
 }
 
 .blocks {
@@ -110,6 +111,15 @@ body {
     cursor: pointer;
 }
 
+#crt {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    text-align: center;
+    padding: 5px;
+    margin-left: 20px;
+}
+
 
 
 #filter-box {
@@ -117,8 +127,9 @@ body {
 }
 
 .filter1 {
-    border: 1px dashed #333;
+    border: 1pt dashed rgb(200, 196, 196);
     line-height: 30px;
+    padding-left: 10px;
 }
 
 
@@ -132,17 +143,19 @@ body {
     justify-content: space-evenly;
     gap: 30px;
     margin-top: 100px;
+    width: 90%;
 }
 
 #product-container {
     margin: auto;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 30px;
+    grid-gap: 20px;
+    row-gap: 50px;
 }
 
 #product-container>div {
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     padding: 10px;
     border-radius: 5px;
     position: relative;
@@ -222,10 +235,11 @@ body {
     padding: 20px;
     grid-template-columns: repeat(3, 1fr);
     margin-top: 50px;
+    position: fixed;
+    bottom: 0;
 }
 
 #bottom div {
-
     color: white;
     text-align: center;
     margin: auto;
@@ -247,4 +261,31 @@ body {
 
 #uname {
     color: wheat;
+}
+
+/* No result found */
+
+#notavailable {
+    text-align: center;
+    margin-top: 150px;
+    display: none;
+}
+
+#notavailable> :nth-child(1) {
+    font-size: 20px;
+}
+
+#notavailable> :nth-child(2) {
+    font-size: 20px;
+}
+
+#notavailable> :nth-child(4) {
+    font-size: 40px;
+    margin-top: 50px;
+}
+
+#notavailable> :nth-child(5) {
+    font-size: 20px;
+    font-size: 15px;
+    color: rgb(148, 145, 145);
 }
