--- a/Shopping Page/shopping.css
+++ b/Shopping Page/shopping.css
@@ -354,3 +354,10 @@ body {
 #uname{
     color: wheat;
 }
+#crt {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding: 5px;
+    cursor: pointer;
+}
