--- a/payment/payment.css
+++ b/payment/payment.css
@@ -114,15 +114,12 @@ ul {
   font-size: 35px;
 }
 .mainProduct {
-  background-color: rgb(239, 239, 239);
+  background-color: rgb(247, 247, 247);
   padding: 80px 100px 0px 50px;
 }
 .productCards {
   width: 550px;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
-    rgba(0, 0, 0, 0.22) 0px 10px 10px;
-
-
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
   max-height: 500px;
   overflow: auto;
   padding-right: 20px;
